<resources>
    <string name="app_name">SchachApp</string>

    <string-array name="sbMenueOn">
        <item>Menü</item>
        <item>Aufgeben</item>
        <item>Remis anbieten</item>
        <item>Einstellungen</item>
        <item>Spiel verlassen</item>
        <item>Zurück zum Spiel</item>
    </string-array>

    <string-array name="sbMenueOff">
        <item>Menü</item>
        <item>Einstellungen</item>
        <item>Spiel verlassen</item>
        <item>Zurück zum Spiel</item>
    </string-array>

    <!-- Remisangebot -->
    <string name="remis_confirm_button">Annehmen</string>
    <string name="remis_reject_button">Ablehnen</string>
    <string name="remis_message">Dein Gegner bietet dir ein Remis an!</string>

    <string name="goToMenue">Menü</string>

    <!-- Bauer umwandeln -->
    <string name="promote_title">Wähle eine Figur</string>

    <!-- Figuren -->
    <string name="figur_bauer">Bauer</string>
    <string name="figur_springer">Springer</string>
    <string name="figur_laeufer">Läufer</string>
    <string name="figur_turm">Turm</string>
    <string name="figur_dame">Dame</string>
    <string name="figur_koenig">König</string>

    <!-- Bestenliste/Rangliste -->
    <string name="rang_titel">Bestenliste</string>
    <string name="rang_placeholder_name">Unknown</string>
    <string name="rang_placeholder_points">0</string>
    <string name="rang_placeholder_wld">0 / 0 / 0</string>
    <string name="rang_nr_1">1.</string>
    <string name="rang_nr_2">2.</string>
    <string name="rang_nr_3">3.</string>
    <string name="rang_nr_4">4.</string>
    <string name="rang_nr_5">5.</string>
    <string name="rang_placeholder_nr_x">9999.</string>

    <!-- Mehrfaches auftauchen -->
    <string name="hint_email">E-Mail</string>
    <string name="hint_password">Passwort</string>
    <string name="activity_return">Zurück</string>
    <string name="activity_register">Registrieren</string>
    <string name="time_5_min">5 Minuten</string>
    <string name="time_15_min">15 Minuten</string>
    <string name="time_10_min">10 Minuten</string>
    <string name="time_30_min">30 Minuten</string>
    <string name="time_60_min">60 Minuten</string>
    <string name="time_infinite_min">Unbegrenzt</string>
    <string name="label_time">Zeit pro Spieler:</string>
    <string name="color_white">Weiß</string>
    <string name="color_black">Schwarz</string>

    <!-- LoginActivity -->
    <string name="activity_login">Login</string>
    <string name="activity_reset_password">Passwort zurücksetzen</string>

    <!-- RegisterActivity -->
    <string name="hint_verify_password">Passwort bestätigen</string>
    <string name="hint_username">Benutzername</string>

    <!-- MainAciticity -->
    <string name="activity_new_game">Neue Partie</string>
    <string name="activity_rangliste">Bestenliste</string>
    <string name="activity_continue_game">Partie fortsetzen</string>
    <string name="activity_load_game">Partie laden</string>
    <string name="activity_settings">Einstellungen</string>
    <string name="activity_logout">Logout</string>

    <!-- SettingsAciticity -->
    <string name="activity_save">Speichern</string>
    <string name="activity_save_and_return">Speichern und zurück</string>
    <string name="label_username">Benutzername:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_highlighting">Highlighting:</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- NewGameActivity -->
    <string name="activity_new_online_game">Online-Partie</string>
    <string name="activity_new_ki_game">Partie gegen Computer</string>
    <string name="activity_new_offline_game">Offline-Partie</string>

    <!-- NewOnlineGameActivity -->
    <string name="label_favorite_color">Bevorzugte Farbe:</string>
    <string name="activity_enter_queue">Partie suchen</string>

    <!-- NewOfflineGameActivity -->
    <string name="label_color_player1">Farbe Spieler1:</string>
    <string name="activity_enter_game">Partie starten</string>
    <string name="hint_name_player2">Name Spieler 2</string>

    <!-- Success -->
    <string name="success_password_reset">Passwort erfolgreich zurückgesetzt! Überprüfe deine E-Mails.</string>
    <string name="success_register">Registrierung erfolgreich!</string>

    <!-- Errors -->
    <string name="error_invalid_email">Ungültige E-Mail</string>
    <string name="error_invalid_password">Ungültiges Passwort</string>
    <string name="error_incorrect_input">Passwort oder E-Mail falsch</string>
    <string name="error_field_required">Dieses Feld muss ausgefüllt sein</string>
    <string name="error_invalid_username">Mindestens 3 Zeichen.</string>
    <string name="error_short_password">Mindestens 8 Zeichen</string>
    <string name="error_different_password">Passwörter stimmen nicht überein</string>
    <string name="error_password_reset">Zurücksetzen fehlgeschlagen! Überprüfe deine Eingabe.</string>
    <string name="error_register">Registrierung fehlgeschlagen! E-Mail wird bereits verwendet.</string>
    <string name="error_get_data">Synchronisierung mit Server fehlgeschlagen! Daten konnten nicht geladen werden.</string>
    <string name="title_activity_spielbrett">Spielbrett</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


</resources>
